# NativeXNA

./: CMakeLists.txt  LICENSE.md  README.md
NativeXNA/: CMakeLists.txt
NativeXNA/include/NativeXNA/: Common.hpp  Framework.hpp  Game.hpp  Graphics.hpp  Runtime.hpp
NativeXNA/src/NativeXNA/: Game.cpp  Graphics.cpp  Platform.hpp
NativeXNA/src/Platform/D3D11/: D3D11Graphics.cpp  D3D11Graphics.hpp  D3D11Include.hpp
NativeXNA/src/Platform/Win32/: Win32Game.cpp  Win32Game.hpp  Win32Include.hpp
Sandbox/: CMakeLists.txt  Main.cpp
